tests/baselines/reference/parser_duplicateLabel1.errors.txt
==== tests/cases/compiler/parser_duplicateLabel1.ts (1 errors) ====
    target:
    target:
    ~~~~~~
!!! parser_duplicateLabel1.ts(2,1): error TS2000: Duplicate identifier 'target'.
    while (true) {
    }